--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -11,3 +11,5 @@
 @import './layout/responsive.css';
 @import './pages/insurance-page.css';
 @import './pages/mortgagecalculator.css';
+@import './components/chatwidget.css';
+@import './components/lenderscarousel.css';
