Update footer to have development credits

--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -13,3 +13,4 @@
 @import './pages/mortgagecalculator.css';
 @import './components/chatwidget.css';
 @import './components/lenderscarousel.css';
+@import './components/footer.css';
