--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -1,6 +1,7 @@
 @import './variables.css';
 @import './base.css';
 @import './components/header.css';
+@import './components/logo.css';
 @import './components/buttons.css';
 @import './components/cards.css';
 @import './components/forms.css';
